# aom-rs

./: .gitmodules  Cargo.toml  build.rs
.cargo/: config.toml
av-codec/: Cargo.toml
av-codec/src/: decoder.rs
av-data/: Cargo.toml
av-data/src/: frame.rs
libaom-sys/: Cargo.toml  build.rs
libaom-sys/src/: ffi.rs  lib.rs
src/: common.rs  decoder.rs  encoder.rs  lib.rs
