[package]
name = "libaom"
version = "0.3.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "libaom bindings"
repository = "https://github.com/rust-av/aom-rs"
readme = "README.md"
keywords = ["libaom","av1"]

[features]
default = ["codec-trait"]
codec-trait = ["av-codec"]

[dependencies]
libaom-sys = { version = "0.12.0", path = "libaom-sys" }
av-data = { version = "0.3.0" }
av-codec = { version = "0.2.2", optional = true }

[workspace]
members = ["libaom-sys"]

[dev-dependencies]
regex ="1.5.4"
